log/build_2024-02-09_13-14-12/sensors/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/groupl/MarcWS/install/sensors/lib/python3.10/site-packages/sensors/serialread.py", line 12
    while True
              ^
SyntaxError: expected ':'

